fix: allow validators to list scoped participants
